# file-breaker

./: .gitignore  README.md  README_PyPi.md  breaker_cli.py  build.sh  file_breaker.py  main.py  pyproject.toml
.github/workflows/: main.yml
code/: breaker_cli.py  file_breaker.py  logo.py
code/lib/: file_breaker.py
resources/: logo.py
